# minigrad-dl

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
apps/: models.py  train_cifar.py  train_lm_lstm.py  train_lm_transformer.py
benchmarks/: matmul_benchmark.py
minigrad/: __init__.py  autograd.py  setup.py
minigrad/backend_ndarray/: CMakeLists.txt  __init__.py  ndarray.py  ndarray_backend_cpu.cc  ndarray_backend_cuda.cu
minigrad/data/: __init__.py
minigrad/init/: __init__.py
minigrad/nn/: __init__.py  nn_basic.py  nn_conv.py  nn_sequence.py  nn_transformer.py
minigrad/ops/: __init__.py  ops_logarithmic.py  ops_mathematic.py
minigrad/optim/: __init__.py
minigrad/tests/: test_autograd.py  test_ndarray.py  test_nn.py  test_ops.py
